# FarconN

./: CMakeLists.txt  README.md  main.cpp
docs/: chat_add.md  chat_add.txt  chat_create.md  chat_create.txt  chat_leave.md  chat_leave.txt  chat_messages_list.md  chat_messages_list.txt  chat_party_list.md  chat_party_list.txt  chat_post.md  chat_post.txt  chats_list.md  chats_list.txt  common.txt  contact_delete.md  contact_delete.txt  contacts_list.md  contacts_list.txt  invite.md  invite.txt  invites_list.md  invites_list.txt  login.md  login.txt  logout.md  menu.md  profile_get.md  profile_get.txt  profile_set.md  profile_set.txt  search.md  search.txt  signup.md  signup.txt
example/: client1.cpp  client2.cpp  client3.cpp  server.cpp
example/configs/: client_cfg.json  server_cfg.json
include/client/: client.hpp
include/client/config/: client_config.hpp
include/client/network/: client_networking.hpp
include/client/src/: client.cpp  client_config.cpp  client_networking.cpp
include/general/config/: config.hpp
include/general/logger/: logger.hpp  logger_stream.hpp
include/general/multithread_context/: context_mode_type.hpp  multithread_context.hpp
include/general/network/: client_networking_base.hpp  networking.hpp  networking_execution.hpp  networking_storage.hpp
include/general/protocol/: command.hpp  command_analyzer.hpp  command_builder.hpp  command_entities.hpp  composite_parameter_builder.hpp  protocol_interpreter.hpp  server_status_code.hpp  status_code_interpreter.hpp
include/general/protocol v2.0/: command_builder.hpp  command_entities.hpp  composite_parameter_builder.hpp  protocol_interpreter.hpp
include/general/protocol/entities/: basic_message_info.hpp  client_containers.hpp  entities.hpp  ex_chat_info.hpp  ex_message_info.hpp  ex_user_info.hpp  external_chat_info.hpp  external_message_info.hpp  external_user_info.hpp  invitations_info.hpp  primitive_user_info.hpp
include/general/src/: client_networking_base.cpp  command_analyzer.cpp  command_builder.cpp  command_entities.cpp  format_validators.cpp  logger.cpp  logger_stream.cpp  networking.cpp  networking_execution.cpp  networking_storage.cpp  protocol_interpreter.cpp  status_code_interpreter.cpp  utf8_encoder.cpp
include/general/tools/: encoders.hpp  macro.hpp  utf8_encoder.hpp
include/general/tools/thread_safe_containers/: thread_safe_container.hpp  thread_safe_queue.hpp  thread_safe_unordered_map.hpp
include/general/validators/: format_validator.hpp  format_validators.hpp
include/server/: server.hpp
include/server/config/: database_config.hpp  server_config.hpp
include/server/db/: db_queries_generator.hpp  db_responder.hpp
include/server/middleware/: server_middleware.hpp
include/server/middleware/entities/: chat_entities.hpp  client_session.hpp  entities.hpp  searching_cache.hpp  selection_entities.hpp  user_entities.hpp  user_profile.hpp  users_relations_type.hpp
include/server/middleware/handlers/: chat_add_handler.hpp  chat_create_handler.hpp  chat_handler.hpp  chat_leave_handler.hpp  chat_list_handler.hpp  chat_messages_list_handler.hpp  chat_party_list_handler.hpp  chat_post_handler.hpp  chats_list_handler.hpp  contact_delete_handler.hpp  contacts_list_handler.hpp  handler.hpp  handlers.hpp  help_handler.hpp  invite_handler.hpp  invites_list_handler.hpp  login_handler.hpp  logout_handler.hpp  profile_get_handler.hpp  profile_handler.hpp  profile_set_handler.hpp  search_handler.hpp  selection_handler.hpp  signup_handler.hpp
include/server/network/: client_networking_proxy.hpp  server_networking.hpp
include/server/src/: client_networking_proxy.cpp  db_queries_generator.cpp  db_responder.cpp  query_ranking_estimator.cpp  server.cpp  server_config.cpp  server_middleware.cpp  server_networking.cpp  token_generator.cpp  user_profile.cpp
include/server/tools/: query_ranking_estimator.hpp  token_generator.hpp
(+23 files in other folders)
